# peckerheckler

./: .gitignore  ARCHITECTURE.md  amplify.yml
backend/: .env.example  audio_service.py  db.py  main.py  requirements.txt
backend/audio/: eagle.pcm  hawk.pcm  polar_bear.pcm
firmware/: CMakeLists.txt  Kconfig.projbuild  sdkconfig.defaults
firmware/main/: CMakeLists.txt  cloud.c  cloud.h  detector.c  detector.h  led.c  led.h  main.c  mic.c  mic.h  patterns.h  pinout.h  responder.c  responder.h  speaker.c  speaker.h
firmware/main/tests/: self_test.c  self_test.h
firmware/test_data/: woodpecker.pcm  woodpecker_test.pcm
mobile-app/: app.json  package.json
mobile-app/app/: _layout.tsx
mobile-app/app/(tabs)/: _layout.tsx  history.tsx  index.tsx
mobile-app/app/incident/: [id].tsx
mobile-app/constants/: Colors.ts
mobile-app/lib/: api.ts
mobile-app/types/: index.ts
web-app/: package-lock.json  package.json
web-app/scripts/: gen-amplify-manifest.mjs
web-app/src/app/: globals.css  layout.tsx  page.tsx
web-app/src/app/api/notify/: route.ts
web-app/src/app/invest/: page.tsx
web-app/src/app/legal/: page.tsx
web-app/src/app/shop/: page.tsx
web-app/src/components/: AppMockup.tsx  Nav.tsx  ShopContent.tsx  SpeakWarningMockup.tsx  TwemojiInit.tsx
web-app/src/lib/: db.ts
